# surepet-rs

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
src/api/: devices.rs  login.rs  mod.rs  pets.rs
src/entities/: flap.rs  hub.rs  mod.rs  pet.rs  shared.rs
src/utils/: authentication.rs
