[package]
name = "surepet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
dyn_partial_eq = "0.1.2"
home = "0.5.4"
humantime = "2.1.0"
mockito = "0.31.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-test = "0.4.2"
